// Apibara StarkNet Support
syntax = "proto3";

package apibara.starknet.v1alpha2;

import "google/protobuf/timestamp.proto";
import "v1alpha2/types.proto";

// A StarkNet block.
message Block {
  BlockStatus status = 1;
  BlockHeader header = 2;
  repeated Transaction transactions = 3;
  repeated TransactionReceipt receipts = 4;
  StateUpdate state_update = 5;
  repeated Event events = 6;
}

// Block header.
message BlockHeader {
  FieldElement block_hash = 1;
  FieldElement parent_block_hash = 2;
  uint64 block_number = 3;
  FieldElement sequencer_address = 4;
  FieldElement new_root = 5;
  google.protobuf.Timestamp timestamp = 6;
}

// Status of a block.
enum BlockStatus {
  BLOCK_STATUS_UNSPECIFIED = 0;
  BLOCK_STATUS_PENDING = 1;
  BLOCK_STATUS_ACCEPTED_ON_L2 = 2;
  BLOCK_STATUS_ACCEPTED_ON_L1 = 3;
  BLOCK_STATUS_REJECTED = 4;
}

// Status of a transaction.
enum TransactionStatus {
  TRANSACTION_STATUS_UNSPECIFIED = 0;
  TRANSACTION_STATUS_RECEIVED = 1;
  TRANSACTION_STATUS_PENDING = 2;
  TRANSACTION_STATUS_ACCEPTED_ON_L2 = 3;
  TRANSACTION_STATUS_ACCEPTED_ON_L1 = 4;
  TRANSACTION_STATUS_REJECTED = 5;
}

message Transaction {
  TransactionMeta meta = 1;
  TransactionReceipt receipt = 8;
  oneof transaction {
    InvokeTransactionV0 invoke_v0 = 2;
    InvokeTransactionV1 invoke_v1 = 3;
    DeployTransaction deploy = 4;
    DeclareTransaction declare = 5;
    L1HandlerTransaction l1_handler = 6;
    DeployAccountTransaction deploy_account = 7;
  }
}

message TransactionMeta {
  FieldElement hash = 1;
  FieldElement max_fee = 2;
  repeated FieldElement signature = 3;
  FieldElement nonce = 4;
  uint64 version = 5;
}

message InvokeTransactionV0 {
  FieldElement contract_address = 1;
  FieldElement entry_point_selector = 2;
  repeated FieldElement calldata = 3;
}

message InvokeTransactionV1 {
  FieldElement sender_address = 1;
  repeated FieldElement calldata = 2;
}

message DeclareTransaction {
  FieldElement class_hash = 1;
  FieldElement sender_address = 2;
}

message DeployTransaction {
  repeated FieldElement constructor_calldata = 2;
  FieldElement contract_address_salt = 3;
  FieldElement class_hash = 4;
}

message L1HandlerTransaction {
  FieldElement contract_address = 2;
  FieldElement entry_point_selector = 3;
  repeated FieldElement calldata = 4;
}

message DeployAccountTransaction {
  repeated FieldElement constructor_calldata = 2;
  FieldElement contract_address_salt = 3;
  FieldElement class_hash = 4;
}

message TransactionReceipt {
  Transaction transaction = 8;
  FieldElement transaction_hash = 1;
  uint64 transaction_index = 2;
  FieldElement actual_fee = 3;
  repeated L2ToL1Message l2_to_l1_messages = 6;
  repeated Event events = 7;
}

message L2ToL1Message {
  Transaction transaction = 3;
  TransactionReceipt receipt = 4;
  FieldElement to_address = 1;
  repeated FieldElement payload = 2;
}

message Event {
  Transaction transaction = 4;
  TransactionReceipt receipt = 5;
  FieldElement from_address = 1;
  repeated FieldElement keys = 2;
  repeated FieldElement data = 3;
}

message StateUpdate {
  FieldElement new_root = 1;
  FieldElement old_root = 2;
  StateDiff state_diff = 3;
}

message StateDiff {
  repeated StorageDiff storage_diffs = 1;
  repeated DeclaredContract declared_contracts = 2;
  repeated DeployedContract deployed_contracts = 3;
  repeated NonceUpdate nonces = 4;
}

message StorageDiff {
  FieldElement contract_address = 1;
  repeated StorageEntry storage_entries = 2;
}

message StorageEntry {
  FieldElement key = 1;
  FieldElement value = 2;
}

message DeclaredContract {
  FieldElement class_hash = 1;
}

message DeployedContract {
  FieldElement contract_address = 1;
  FieldElement class_hash = 2;
}

message NonceUpdate {
  FieldElement contract_address = 1;
  FieldElement nonce = 2;
}