// Apibara Stream service.
syntax = "proto3";

package apibara.node.v1alpha2;

import "v1alpha2/starknet.proto";

service Stream {
  // Stream data from the node.
  rpc StreamData(stream StreamDataRequest) returns (stream StreamDataResponse);
}

// Request data to be streamed.
message StreamDataRequest {
  // Used by the client to uniquely identify a stream.
  // All streams use `stream_id = 0` by default.
  optional uint64 stream_id = 1;
  // Start streaming from the provided cursor.
  bytes starting_cursor = 2;
  // Return data with the specified finality.
  // If not specified, defaults to `DATA_STATUS_ACCEPTED`.
  optional DataFinality finality = 3;
  // Return data according to the stream-specific filter.
  apibara.starknet.v1alpha2.Filter filter = 4;
}

// Contains the data requested from the client.
message StreamDataResponse {
  // The stream id.
  uint64 stream_id = 1;
  oneof message {
    Invalidate Invalidate = 2;
    Data data = 3;
    Heartbeat heartbeat = 4;
  }
}

// Data finality.
enum DataFinality {
  DATA_STATUS_UNKNOWN = 0;
  // Data was received, but is not part of the canonical chain yet.
  DATA_STATUS_PENDING = 1;
  // Data is now part of the canonical chain, but could still be invalidated.
  DATA_STATUS_ACCEPTED = 2;
  // Data is finalized and cannot be invalidated.
  DATA_STATUS_FINALIZED = 3;
}

// Invalidate data after the given cursor.
message Invalidate { bytes cursor = 1; }

// A batch of data.
message Data {
  // Cursor of the last item in the batch.
  bytes end_cursor = 1;
  // The finality status of the data in the batch.
  DataFinality finality = 2;
  // The stream data.
  repeated apibara.starknet.v1alpha2.Block data = 3;
}

// Sent to clients to check if stream is still connected.
message Heartbeat {}
